# gst_with_qml

./: CMakeLists.txt  main.cpp
